--- a/samples/ControlCatalog/Pages/ImagePage.xaml
+++ b/samples/ControlCatalog/Pages/ImagePage.xaml
@@ -24,7 +24,7 @@
 
       <DockPanel Grid.Column="1" Grid.Row="1" Margin="16">
         <DockPanel.Resources>
-          <pages:SvgImage x:Key="__tiger" Source="/Assets/__tiger.svg"/>
+          <svg:SvgImage x:Key="__tiger" Source="/Assets/__tiger.svg"/>
         </DockPanel.Resources>
         <TextBlock DockPanel.Dock="Top" Classes="h3" Margin="0 8">Svg</TextBlock>
         <ComboBox Name="drawingStretch" DockPanel.Dock="Top" SelectedIndex="2" SelectionChanged="DrawingStretchChanged">
@@ -51,7 +51,7 @@
         </Image>-->
         <!--<Image Name="drawingImage">
           <Image.Source>
-            <pages:SvgImage Source="/Assets/__tiger.svg"/>
+            <svg:SvgImage Source="/Assets/__tiger.svg"/>
           </Image.Source>
         </Image>-->
         <Image Name="drawingImage" Source="{DynamicResource __tiger}"/>
